# stock-recommendation

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  个人选股App-需求规格说明书.md
.claude/: launch.json
.streamlit/: config.toml
backend/: manage.py  requirements.txt
backend/api/: services.py  urls.py  views.py
backend/aselect_api/: settings.py  wsgi.py
config/: config.example.yaml
deploy/: aselect-scheduler.service  aselect-web.service
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: CandidateTable.tsx  Filters.tsx  PriceChart.tsx  RecommendationsPanel.tsx  ResearchPanel.tsx  StatusBar.tsx  StockDetail.tsx  StockQuery.tsx  StrategyBacktest.tsx  Term.tsx
scripts/: serve.sh  start.ps1  start.sh
src/aselect/: __init__.py  cli.py  config.py  field_schema.py  glossary.py  recommend.py  runner.py  scheduler.py
src/aselect/ai/: __init__.py  anthropic_analyzer.py  base.py  cache.py  factory.py  llm_base.py  null_analyzer.py  openai_analyzer.py
src/aselect/app/: streamlit_app.py
src/aselect/data/: __init__.py  clean.py  pipeline.py  symbols.py
src/aselect/datasource/: __init__.py  base.py  (+5 more)
tests/: test_baostock_source.py  test_board.py  test_degradation.py  test_determinism.py  test_factor_backtest.py  test_factor_neutralization.py  test_factor_research.py  test_indicators.py  test_no_llm_in_core.py  test_pit.py  test_recommend.py  test_screener.py  test_survivorship.py  test_sync_pipeline.py
(+11 files in other folders)
